--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>labyrinth-vue</title>
   </head>
-  <body>
+  <body style="margin: 1;">
     <noscript>
       <strong
         >We're sorry but labyrinth-vue doesn't work properly without JavaScript
